[package]
name = "optivanity"
version = "1.0.0"
edition = "2021"
authors = ["Econia Labs"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
indicatif = "0.17.8"
num = "0.4.2"
rand = "0.8.5"
regex = "1.8"
sha3 = "0.10.8"

[profile.release]
lto = true
codegen-units = 1
